--- a/DiscHubApp/src/main/resources/com/dischub/views/login.fxml
+++ b/DiscHubApp/src/main/resources/com/dischub/views/login.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.Icon?>
 <?import com.gluonhq.charm.glisten.mvc.View?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
@@ -36,11 +35,9 @@
                </children>
             </HBox>
             <Label fx:id="label" text="%label.text.1" />
-            <Button mnemonicParsing="false" onAction="#buttonClick" text="%button.text">
-               <graphic>
-                  <Icon content="LANGUAGE" />
-               </graphic>
-            </Button>
+            <Button fx:id="btnLogin" mnemonicParsing="false" onAction="#buttonClick" text="%button.text" />
+            <Button fx:id="btnCreateAccount" mnemonicParsing="false" onAction="#createAccount" text="%button2.text" />
+            <Button fx:id="btnResetPassword" mnemonicParsing="false" onAction="#resetPassword" text="%button3.text" />
          </children>
       </VBox>
    </center>
